<resources>
    <!-- App Title -->
    <string name="app_name">Activity Platform</string>

    <!-- Nav Fragments -->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>
    <string name="title_sensors">Sensors</string>

    <!-- Buttons -->
    <string name="pause_btn">Pause</string>
    <string name="start_btn">Start</string>
    <string name="feed_btn">Feed</string>
    <string name="save_btn">Save</string>
    <string name="reset_btn">Reset</string>
    <string name="factory_reset_btn">Factory Reset</string>

    <!-- Static Text -->
    <string name="service_status">Active</string>
    <string name="compassImgDescription">Image representing the physical compass.</string>
    <string name="hot_temp">Hot Temp:</string>
    <string name="cold_temp">Cold Temp:</string>
    <string name="freezing_temp">Freezing Temp:</string>
    <string name="temperature_regulation">Temperature Regulation</string>
</resources>